# acts

BGVFiles/: tgeo-bgv-MALTA_3_06_0912_111418.response  tgeo-bgv-MALTA_bare.response  tgeo-bgv-SIDU_4.response  tgeo-bgv-SIDU_bare.response  tgeo-bgv-matmap-MALTA_3_06_0912_111418.response  tgeo-bgv-matmap-MALTA_bare.response  tgeo-bgv-matmap-SIDU_4.response  tgeo-bgv-matmap-SIDU_bare.response  tgeo-bgv-truthtrack-SIDU_4.response  tgeo-bgv-truthtrack-SIDU_bare.response  tgeo-bgv-valmatmap-MALTA_3_06_0912_111418.response  tgeo-bgv-valmatmap-MALTA_bare.response  tgeo-bgv-valmatmap-SIDU_4.response  tgeo-bgv-valmatmap-SIDU_bare.response  write_list_SD_to_response.sh
Core/include/Acts/Surfaces/: ConeBounds.hpp  RadialBounds.hpp
Core/include/Acts/Surfaces/detail/: DiscSurface.ipp  LineSurface.ipp
Core/include/Acts/TrackFinding/: CombinatorialKalmanFilter.hpp
Core/include/Acts/TrackFitting/: KalmanFitter.hpp
Core/include/Acts/Utilities/: BinAdjustment.hpp
Core/include/Acts/Vertexing/: FullBilloirVertexFitter.ipp  HelicalTrackLinearizer.ipp
Core/include/Acts/Visualization/: GeometryView3D.hpp
Core/src/Geometry/: CylinderVolumeHelper.cpp  LayerArrayCreator.cpp  LayerCreator.cpp
Core/src/Material/: Interactions.cpp  SurfaceMaterialMapper.cpp
Core/src/Propagator/detail/: PointwiseMaterialInteraction.cpp
Core/src/Surfaces/: PlaneSurface.cpp
Core/src/Visualization/: GeometryView3D.cpp
Examples/Algorithms/Digitization/: CMakeLists.txt
Examples/Algorithms/Digitization/src/: DigitizationAlgorithm.cpp  HitSmearing.cpp  PlanarSteppingAlgorithm.cpp
Examples/Algorithms/Fitting/src/: FittingAlgorithm.cpp
Examples/Algorithms/Geant4/include/ActsExamples/Geant4/: GeantinoRecording.hpp  PrimaryGeneratorAction.hpp
Examples/Algorithms/Geant4/src/: GdmlDetectorConstruction.cpp  Geant4Options.cpp  GeantinoRecording.cpp  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.hpp  SteppingAction.cpp
Examples/Algorithms/TrackFitting/include/ActsExamples/TrackFitting/: TrackFittingAlgorithm.hpp
Examples/Algorithms/TrackFitting/src/: TrackFittingAlgorithm.cpp  TrackFittingAlgorithmFunction.cpp
Examples/Algorithms/TruthTracking/: CMakeLists.txt
Examples/Algorithms/TruthTracking/ActsExamples/TruthTracking/: CombTrackFinderBGV.cpp  CombTrackFinderBGV.hpp  ParticleSmearing.cpp  ParticleSmearingBGV.cpp  ParticleSmearingBGV.hpp  ParticleSmearingCombFinder.cpp  ParticleSmearingCombFinder.hpp  TruthSeedSelector.cpp  TruthSeedSelector.hpp  TruthTrackFinder.cpp
Examples/Algorithms/Vertexing/: CMakeLists.txt
Examples/Algorithms/Vertexing/include/ActsExamples/Vertexing/: AdaptiveMultiVertexFinderAlgorithmFromTrajBGV.hpp  VertexFitterAlgorithm.hpp  VertexFitterAlgorithmBGV.hpp  VertexFitterAlgorithmFromTraj.hpp  VertexFitterAlgorithmFromTrajBGV.hpp
Examples/Algorithms/Vertexing/src/: AdaptiveMultiVertexFinderAlgorithmFromTrajBGV.cpp  VertexFitterAlgorithm.cpp  VertexFitterAlgorithmBGV.cpp  VertexFitterAlgorithmFromTraj.cpp  VertexFitterAlgorithmFromTrajBGV.cpp
Examples/Detectors/Common/include/ActsExamples/Detector/: IBaseDetector.hpp
Examples/Detectors/TGeoDetector/: CMakeLists.txt
Examples/Detectors/TGeoDetector/include/ACTFW/TGeoDetector/: BuildTGeoDetector.hpp
Examples/Detectors/TGeoDetector/include/ActsExamples/TGeoDetector/: BuildTGeoBGVDetector.hpp  BuildTGeoDetector.hpp  TGeoBGVDetector.hpp
Examples/Detectors/TGeoDetector/src/: TGeoBGVDetector.cpp  TGeoDetector.cpp  TGeoDetectorOptions.cpp
Examples/Framework/include/ActsExamples/EventData/: SimSourceLink.hpp
Examples/Framework/include/ActsExamples/Validation/: EffPlotTool.hpp  ResPlotTool.hpp
Examples/Io/Csv/src/: CsvPlanarClusterReader.cpp  CsvSimHitReader.cpp
Examples/Io/Performance/ActsExamples/Io/Performance/: CKFPerformanceWriter.hpp
Examples/Io/Root/: CMakeLists.txt
Examples/Io/Root/include/ActsExamples/Io/Root/: RootTrajectoryStatesWriterBGV.hpp  RootTrajectoryWriterBGV.hpp  RootVertexAndTrackWriterBGV.hpp
Examples/Io/Root/src/: RootTrajectoryStatesWriter.cpp  RootTrajectoryStatesWriterBGV.cpp  RootTrajectoryWriterBGV.cpp  RootVertexAndTrackWriterBGV.cpp
Examples/Run/Common/src/: CommonOptions.cpp
Examples/Run/Fatras/Common/: Fatras.hpp  FatrasDigitizationBase.hpp  FatrasEvgenBase.hpp  FatrasMain.hpp  FatrasSimulationBase.hpp
Examples/Run/Geometry/: CMakeLists.txt  TGeoBGVGeometryExample.cpp
Examples/Run/MaterialMapping/: CMakeLists.txt  TGeoMaterialMapping.cpp  TGeoMaterialValidation.cpp
Examples/Run/Reconstruction/: CMakeLists.txt  RecCKFTracksBGV.cpp  RecCKFTracksBGVnew.cpp  RecCombTrackFinderBGV.cpp  RecTruthTracksBGV.cpp  RecTruthTracksBGV_Vertex.cpp  RecTruthTracksVertexBGV.cpp  TGeoRecCombFinderTracks.cpp  TGeoRecTruthTracksVertex.cpp  TelescopeBGVRecTruthTracks.cpp
Examples/Run/Reconstruction/Common/: CMakeLists.txt  RecCombFinderTracks.cpp  RecCombFinderTracks.hpp  RecInput.cpp  RecInput.hpp  RecTruthTracks.cpp  RecTruthTracks.hpp
Examples/Run/Vertexing/: CMakeLists.txt  VertexFinderReaderExampleBGV.cpp
Examples/Scripts/: boundParamResolution.C  perigeeParamResolutionBGV.C
Examples/Scripts/MaterialMaping/: Mat_map2.C  Mat_map3.C  Mat_map_bgv.C  Mat_map_surface_plot.C  Mat_map_surface_plot_ratio.C  configureMap.py  configureMapBGV.py  materialPlotHelper.cpp  writeMapConfig.py  writeMapConfigBGV.py
Plugins/Json/src/: JsonGeometryConverter.cpp
Plugins/TGeo/include/Acts/Plugins/TGeo/: TGeoDetectorElement.hpp  TGeoLayerBuilder.hpp
Plugins/TGeo/src/: TGeoDetectorElement.cpp  TGeoLayerBuilder.cpp  TGeoParser.cpp  TGeoSurfaceConverter.cpp
Tests/UnitTests/Plugins/TGeo/: TGeoLayerBuilderTests.cpp
